# Major_project

./: LICENSE  README.md  app.py  convert_log_csv.py  load_predict.py  preprocess.py  pyproject.toml  requirements.txt  train_timeseries.py  train_transformer.py
